<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPersonal">

    <EditText
        android:id="@+id/et_signup_bname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/business_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_signup_Iname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_signup_Iname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/industry"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radio_signup_newb"
        app:layout_constraintStart_toStartOf="@+id/et_signup_bname"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_bname" />

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/radio_signup_newb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_business"
        app:layout_constraintBottom_toTopOf="@+id/radio_signup_existingb"
        app:layout_constraintStart_toStartOf="@+id/et_signup_Iname"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_Iname" />

    <RadioButton
        android:id="@+id/radio_signup_existingb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="106dp"
        android:text="@string/existing_business"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup_next"
        app:layout_constraintStart_toStartOf="@+id/radio_signup_newb"
        app:layout_constraintTop_toBottomOf="@+id/radio_signup_newb" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_signup_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="28dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_signup_existingb"
        app:srcCompat="@drawable/ic_arrow_forward_black_35dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:text="@string/business_details"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_signup_bname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="310dp"
        android:layout_height="120dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="69dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_precisto_full_logo_blue" />


</android.support.constraint.ConstraintLayout>